# ai-dial-code-interpreter

./: .flake8  .gitignore  .ort.yml  Dockerfile  LICENCE  Makefile  README.md  entrypoint.sh  noxfile.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cleanup-untagged-images.yml  pr-title-check.yml  pr.yml  release.yml
aidial_code_interpreter/: app.py  env.py  interpreter.py  model.py
