[tool.poetry]
name = "aidial-code-interpreter"
version = "0.0.0"
description = "DIAL Python Code Interpreter uses Jupiter Kernel to execute code"
authors = ["EPAM RAIL <SpecialEPM-DIALDevTeam@epam.com>"]
homepage = "https://epam-rail.com"
documentation = "https://epam-rail.com/dial_api"
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/epam/ai-dial-code-interpreter"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
ipykernel = "^6.29.5"
jupyter-client = "^8.6.3"
python-multipart = ">=0.0.20,<0.0.28"
numpy = "^2.2.3"
pandas = {extras = ["excel", "output-formatting", "plot"], version = "^2.2.3"}
plotly = "^6.2.0"
matplotlib = "^3.10.0"
nbformat = "^5.10.4"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
scipy = "^1.15.2"

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
python-dotenv = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
responses = "^0.25.3"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"
black = "^24.3.0"
isort = "^5.12.0"
pyright = "^1.1.324"
autoflake = "^2.2.0"

[tool.pyright]
typeCheckingMode = "basic"
reportUnusedVariable = "error"
reportIncompatibleMethodOverride = "error"
exclude = [
    ".git",
    ".venv",
    ".nox",
    "**/.pytest_cache",
    "**/__pycache__",
]

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.venv
  | \.nox
  | \.pytest_cache
  | __pycache__
)/
'''

[tool.isort]
line_length = 80
profile = "black"

[tool.autoflake]
ignore_init_module_imports = true
remove_all_unused_imports = true
in_place = true
recursive = true
quiet = true
exclude = [
    "\\.git",
    "\\.venv",
    "\\.nox",
    "\\.pytest_cache",
    "__pycache__",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"